# RieszFrameLib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  app1.cpp
include/: data.hpp
src/: CMakeLists.txt  data.cpp
